--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,9 @@
 version: 0.2
 phases:
-  '''install:
-    
+  pre-build:  
     commands:
       - echo "Installing dependencies..."
       #- pip install -r requirements.txt -t lib
-  '''
   build:
     commands:
       - echo "Zipping deployment package..."
