--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,6 @@
 version: 0.2
 phases:
-  pre-build:  
+  pre_build:  
     commands:
       - echo "Installing dependencies..."
       #- pip install -r requirements.txt -t lib
